Final guide review fixes